# sma-simulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/: CalculationBlock.h  CalculationMethod.h  Connectivity.h  Connector.h  LinearRunner.h  Numeric.h  Pin.h  Ref.h  Runner.h  Simulator.h  WegsteinRunner.h
core/src/: CalculationBlock.cpp  CalculationMethod.cpp  Connectivity.cpp  Connector.cpp  LinearRunner.cpp  Numeric.cpp  Pin.cpp  Simulator.cpp  WegsteinRunner.cpp
pulp-and-paper/: CMakeLists.txt
pulp-and-paper/include/: BlackLiquor.h  Evaporator.h  PulpAndPaperCalculationSettings.h  SettingsTypes.h  Steam.h
pulp-and-paper/src/: BlackLiquor.cpp  Evaporator.cpp  PulpAndPaperCalculationSettings.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
